Fixed up some layout issues.

--- a/source/css/scss/layout/_layout.scss
+++ b/source/css/scss/layout/_layout.scss
@@ -27,74 +27,42 @@
     @include display(reset);
   }
 
-  @for $i from 1 through $grid-columns {
-    @at-root #{&}--#{$i} {
-      @include span-columns($i);
+  @for $column from 1 through $grid-columns {
+    @at-root #{&}--#{$column} {
+      @include span-columns($column);
     }
 
-    @at-root #{&}--shift-#{$i} {
-      @include span-columns($i);
-    }
-
-    @if $i / $grid-columns == .8 {
-      @at-root #{&}--four-fifths {
-        @include span-columns($i);
+    @each $k, $v in $grid-breakpoints {
+      @at-root #{&}--#{$k}-#{$column} {
+        @include media(min-width $v) {
+          @include span-columns($column);
+        }
       }
     }
+  }
+}
 
-    @if $i / $grid-columns == .75 {
-      @at-root #{&}--three-quarters {
-        @include span-columns($i);
-      }
+.l-shift {
+  @for $column from 1 through $grid-columns {
+    @at-root #{&}--#{$column} {
+      @include shift($column);
     }
 
-    @if $i / $grid-columns == .66 {
-      @at-root #{&}--two-thirds {
-        @include span-columns($i);
+    @each $k, $v in $grid-breakpoints {
+      @at-root #{&}--#{$k}-#{$column} {
+        @include shift($column);
       }
     }
+  }
+}
 
-    @if $i / $grid-columns == .6 {
-      @at-root #{&}--three-fifths {
-        @include span-columns($i);
-      }
-    }
-
-    @if $i / $grid-columns == .50 {
-      @at-root #{&}--half {
-        @include span-columns($i);
-      }
-    }
-
-    @if $i / $grid-columns == .4 {
-      @at-root #{&}--two-fifths {
-        @include span-columns($i);
-      }
-    }
-
-    @if $i / $grid-columns == .33 {
-      @at-root #{&}--one-third {
-        @include span-columns($i);
-      }
-    }
-
-    @if $i / $grid-columns == .25 {
-      @at-root #{&}--one-quarter {
-        @include span-columns($i);
-      }
-    }
-
-    @if $i / $grid-columns == .2 {
-      @at-root #{&}--one-fifth {
-        @include span-columns($i);
-      }
-    }
-
-    @if $i > 1 {
-      // Make sure we don't do a nest of 1 of 1.
-      @for $a from 1 through $i {
-        @at-root #{&}--nest-#{$a}of#{$i} {
-          @include span-columns($a of $i);
+.l-nest {
+  @for $column from 1 through $grid-columns {
+    // Make sure we don't do a nest of 1 of 1.
+    @if $column > 1 {
+      @for $nest from 1 through $column {
+        @at-root #{&}--#{$nest}-of-#{$column} {
+          @include span-columns($nest of $column);
         }
       }
     }
